force-app/main/default/objects/Object_Tag_Mapping__mdt/Object_Tag_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains a mapping for the id prefix, to the related field on the Object Tagging object.</description>
    <label>Object Tag Mapping</label>
    <pluralLabel>Object Tag Mappings</pluralLabel>
</CustomObject>