force-app/main/default/objects/Object_Tag_Mapping__mdt/fields/Object_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Object_Prefix__c</fullName>
    <description>The first 3 digits of the id used to identify which object it is</description>
    <label>Object Prefix</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>