force-app/main/default/objects/Object_Tag_Mapping__mdt/fields/Related_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Field_Name__c</fullName>
    <description>The API name of the field associated with this type of object on the Object Tagging object</description>
    <label>Related Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>