force-app/main/default/objects/Object_Tag_Mapping__mdt/fields/Use_Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Use_Related_Object__c</fullName>
    <businessOwnerGroup>Data_Owner_Salesforce_Team</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>If this is checked/TRUE, then when an Object Tag record is created from the specified "Object Prefix" LWC then it will use the value in the "Related Field Name" to populate into Lead__c, Contact__c or Opportunity__c.
If this is unchecked/FALSE, then when the Object Tag record is created it from the specified "Object Prefix" LWC then it will use the current record to populate into Lead__c, Contact__c or Opportunity__c.
If Use Related Object = TRUE, then it’s going to use the Related Field Name as it’s own ID. So for example, when you create a tag on case, it’s sending the Object Tag the contact ID because the related field name is ContactId and Use Related Object = TRUE. The Object Tag takes that ID, looks at the first 3 characters of the ID, determines it’s a Contact, and places it in the Contact__c field.</description>
    <inlineHelpText>If Use Related Object = TRUE, then it’s going to use the Related Field Name as it’s own ID. So for example, when you create a tag on case, it’s sending the Object Tag the contact ID because the related field name is ContactId and Use Related Object = TRUE. The Object Tag takes that ID, looks at the first 3 characters of the ID, determines it’s a Contact, and places it in the Contact__c field.</inlineHelpText>
    <label>Use Related Object</label>
    <type>Checkbox</type>
</CustomField>